--- a/HTML/carrito-de-compras.html
+++ b/HTML/carrito-de-compras.html
@@ -17,11 +17,15 @@
    
     <!-- Favicon -->
     <link rel="shortcut icon" href="../MULTIMEDIA/favicon.jpg" type="image/x-icon">
-    
+
+    <!-- Conexión con js -->
+    <script defer src="../JS/app.js"></script>
+
     <title>Imprimideco | carrito de compras</title>
 </head>
 
 <body>
+
     <header class="header-container">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
@@ -33,11 +37,22 @@
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 opciones-navbar">
                   <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                  </li>  
+                  </li> 
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./productos.html">Productos</a>
+                  </li> 
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="./carrito-de-compras.html">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
                             <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                          </svg>
+                    </a>
+                  </li>
+                  <li class="nav-item"></li>
+                    <a class="nav-link active" aria-current="page" href="./interfaz-de-usuario.html">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
                           </svg>
                     </a>
                   </li>
