--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="./MULTIMEDIA/favicon.jpg" type="image/x-icon">
 
-    <title>Imprimideco</title>
-
+    <!-- Conexión con js -->
     <script defer src="./JS/app.js"></script>
+
+    <title>Imprimideco</title>
 </head>
 
 <body>
@@ -38,9 +39,20 @@
                         <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                   </li>  
                   <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./HTML/productos.html">Productos</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="./HTML/carrito-de-compras.html">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart3" viewBox="0 0 16 16">
                             <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l.84 4.479 9.144-.459L13.89 4zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                          </svg>
+                    </a>
+                  </li>
+                  <li class="nav-item"></li>
+                    <a class="nav-link active" aria-current="page" href="./HTML/productos.html">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
                           </svg>
                     </a>
                   </li>
@@ -53,6 +65,68 @@
             </div>
           </nav>
     </header>
+
+    <main class="main-index container main">
+
+      <section class="carrusel-container">
+          <div id="carouselExampleIndicators" class="carousel slide animate__animated animate__pulse">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./MULTIMEDIA/montaje-uno.jpg" class="d-block w-100" alt="cuadro abstracto">
+                </div>
+                <div class="carousel-item">
+                  <img src="./MULTIMEDIA/montaje-dos.jpg" class="d-block w-100" alt="cuadros para habitación">
+                </div>
+                <div class="carousel-item">
+                  <img src="./MULTIMEDIA/montaje-tres.jpg" class="d-block w-100" alt="cuadros de cocina">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+          </div>
+      </section>
+
+      <div data-aos="zoom-in">
+        <section class="texto-index">
+          <p class="animate__animated animate__fadeIn"> En Imprimideco, creemos que cada pared cuenta una historia. Nos especializamos en ofrecer una amplia selección de cuadros decorativos que añaden personalidad y encanto a cualquier espacio. <br> Desde modernas abstracciones hasta clásicos atemporales, nuestros cuadros están diseñados para inspirar y elevar la estética de tu hogar u oficina. </p>
+        </section>
+      </div>
+
+      <section class="ver-index">
+        <a href="./HTML/prodcutos.html#paisajes" class="btn btn-primary btn-lg ver">Ver cuadros de paisajes</a>
+        <a href="./HTML/prodcutos.html#minimalistas" class="btn btn-primary btn-lg ver">Ver cuadros minimalistas</a>
+        <a href="./HTML/prodcutos.html#obras" class="btn btn-primary btn-lg ver">Ver cuadros de obras</a>
+      </section>
+
+      
+      <section class="galeria">
+        <div class="galeria-titulo" data-aos="fade-down">
+          <h1>ÍNSPIRATE</h1>
+        </div>
+        <img class="img-galeria" src="./MULTIMEDIA/inspiracion1.png" alt="montaje de cuadros">
+        <img class="img-galeria" src="./MULTIMEDIA/inspiracion2.png" alt="montaje de cuadros">
+        <img class="img-galeria" src="./MULTIMEDIA/inspiracion3.png" alt="montaje de cuadros">
+        <img class="img-galeria" src="./MULTIMEDIA/inspiracion4.png" alt="montaje de cuadros">
+        <img class="img-galeria" src="./MULTIMEDIA/inspiracion5.png" alt="montaje de cuadros">
+        <img class="img-galeria" src="./MULTIMEDIA/inspiracion6.png" alt="montaje de cuadros">
+        <img class="img-galeria" src="./MULTIMEDIA/inspiracion7.png" alt="montaje de cuadros">
+        <img class="img-galeria" src="./MULTIMEDIA/inspiracion8.png" alt="montaje de cuadros">
+        <img class="img-galeria" src="./MULTIMEDIA/inspiracion9.png" alt="montaje de cuadros">
+        <img class="img-galeria" src="./MULTIMEDIA/inspiracion10.png" alt="montaje de cuadros">
+      </section>
+
+    </main>
 
     <footer>
       <ul>
