--- a/HTML/productos.html
+++ b/HTML/productos.html
@@ -66,11 +66,16 @@
           </nav>
     </header>
 
+    <main>
+        <div>
+            <h1> PRODUCTOS </h1>
+            <div id="cont-productos">
+            </div>
+        </div>
+    </main>
+
 
     <!-- conexión con js de boostrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-    <!-- conexión con js -->
-    <script defer src="../JS/app.js"></script>
 </body>
 </html>
