--- a/HTML/productos.html
+++ b/HTML/productos.html
@@ -68,8 +68,8 @@
 
     <main>
         <div>
-            <h1> PRODUCTOS </h1>
-            <div id="cont-productos">
+            <div class="grid-productos" id="cont-productos">
+                <h1 class="titulo-productos"> PRODUCTOS </h1>
             </div>
         </div>
     </main>
