--- a/HTML/interfaz-de-usuario.html
+++ b/HTML/interfaz-de-usuario.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
     <!-- conexión con CSS -->
-    <link rel="stylesheet" href="../CSS/styles-nuevo.css">
+    <link rel="stylesheet" href="../CSS/stilos.css">
 
     <!-- FUENTES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -65,7 +65,7 @@
           </nav>
     </header>
 
-    <!-- <main>
+    <main>
         <section class="container main inicio-de-sesion-container animate__animated animate__pulse">
             <div class="card text-center inicio-de-sesion">
                 <div class="card-body">
@@ -78,25 +78,12 @@
                     Contraseña
                   </label>
                   <input class="form-control me-2" type="password" name="contrasena" id="contrasena"> <br>
-                  <a href="#" id="iniciar-sesion" class="btn btn-primary">Iniciar sesión</a> <br>
+                  <a href="#" id="iniciar-sesion" class="iniciar-sesion btn btn-primary">Iniciar sesión</a> <br>
                 </div>
                 <p id="mensaje"></p>
             </div>
         </section> 
-    </main> -->
-
-    <!-- Formulario de inicio de sesión -->
-    <h2>Iniciar sesión</h2>
-    <form id="loginForm" onsubmit="iniciarSesion(event)">
-        <label for="nombre">Nombre de Usuario:</label>
-        <input type="text" id="nombre" required><br>
-        <label for="password">Contraseña:</label>
-        <input type="password" id="password" required><br>
-        <button type="submit">Iniciar sesión</button>
-    </form>
-    
-    <!-- Mensaje de bienvenida o cierre de sesión -->
-    <p id="mensajeLogin"></p>
+    </main>
 
     <!-- conexión con js de boostrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@ 5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
