--- a/index.html
+++ b/index.html
@@ -104,9 +104,7 @@
       </div>
 
       <section class="ver-index">
-        <a href="./HTML/prodcutos.html#paisajes" class="btn btn-primary btn-lg ver">Ver cuadros de paisajes</a>
-        <a href="./HTML/prodcutos.html#minimalistas" class="btn btn-primary btn-lg ver">Ver cuadros minimalistas</a>
-        <a href="./HTML/prodcutos.html#obras" class="btn btn-primary btn-lg ver">Ver cuadros de obras</a>
+        <a href="./HTML/productos.html" class="btn btn-primary btn-lg ver">Ver Productos</a>
       </section>
 
       
