--- a/HTML/carrito-de-compras.html
+++ b/HTML/carrito-de-compras.html
@@ -66,26 +66,11 @@
           </nav>
     </header>
 
-    <main class="carrito-container container main">
+      <main id="carrito" class="carrito-container container main">
 
-      <div>
-        <div id="cont-carrito">
-        </div>
-        <button id="btn-comprar" style="display:none;" class="btn">Comprar</button>
-        <p id="total"></p>
-    </div>
-
-      <section id="carrito-vacio" class="animate__animated animate__pulse">
-          <img src="../MULTIMEDIA/carrito.jpg" alt="carrito de compras" class="img-fluid carrito-img">
-          <h6 class="carrito-texto"> Aún no tienes nada en tu carrito de compras </h6>
-      </section>
-
-  </main>
+      </main>
 
     <!-- conexión con js de boostrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-    <!-- conexión con js -->
-    <script defer src="../JS/app.js"></script>  
 </body>
 </html>
