--- a/HTML/carrito-de-compras.html
+++ b/HTML/carrito-de-compras.html
@@ -67,8 +67,10 @@
     </header>
 
       <main id="carrito" class="carrito-container container main">
-
+        <h1 class="titulo-carrito"> CARRITO DE COMPRAS </h1>
       </main>
+      <div id="container-btn"> 
+      </div>
 
     <!-- conexión con js de boostrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
