--- a/HTML/productos.html
+++ b/HTML/productos.html
@@ -7,6 +7,9 @@
     <!-- conexión con boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
+    <!-- Conexión con toastify -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+
     <!-- conexión con CSS -->
     <link rel="stylesheet" href="../CSS/stilos.css">
 
@@ -20,6 +23,7 @@
 
     <!-- Conexión con js -->
     <script defer src="../JS/app.js"></script>
+    <script defer src="../JS/productos.json"></script>
     
     <title>Imprimideco | Productos</title>
 </head>
@@ -48,14 +52,6 @@
                           </svg>
                     </a>
                   </li>
-                  <li class="nav-item"></li>
-                  <a class="nav-link active" aria-current="page" href="./interfaz-de-usuario.html">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-                          <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
-                          <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
-                        </svg>
-                  </a>
-                </li>
                 </ul>
                 <form class="d-flex navbar-buscar" role="search">
                   <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
@@ -74,8 +70,10 @@
         </div>
     </main>
 
-
     <!-- conexión con js de boostrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+
+    <!-- conexión con toasify -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+  </body>
 </html>
