--- a/HTML/productos.html
+++ b/HTML/productos.html
@@ -23,7 +23,7 @@
 
     <!-- Conexión con js -->
     <script defer src="../JS/app.js"></script>
-    <script defer src="../JS/productos.json"></script>
+    <!-- <script defer src="../JS/productos.json"></script> -->
     
     <title>Imprimideco | Productos</title>
 </head>
