--- a/HTML/carrito-de-compras.html
+++ b/HTML/carrito-de-compras.html
@@ -20,7 +20,7 @@
 
     <!-- Conexión con js -->
     <script defer src="../JS/app.js"></script>
-    <script defer src="../JS/productos.json"></script>
+    <!-- <script defer src="../JS/productos.json"></script> -->
 
     <title>Imprimideco | carrito de compras</title>
 </head>
